<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mi.mitestanirban.AddingDeviceActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutDeviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextDeviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_type_device_name" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerAndroidVersion"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutSnippet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextSnippet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_type_device_desc" />

    </android.support.design.widget.TextInputLayout>

    <com.dd.CircularProgressButton
        android:id="@+id/buttonSave"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:cpb_cornerRadius="2dp"
        app:cpb_textComplete="@string/completed"
        app:cpb_textError="@string/error"
        app:cpb_textIdle="@string/save" />
</LinearLayout>
